# Pawlows-HyLang

./: .gitignore  README.md  common.py  main.py  pyproject.toml
.github/workflows/: main.yml
cli/: main.py
examples/: source_example.lang  source_example.yaml
gui/: main.py
tests/: bad.yaml  malformed.yaml  test.lang  test.yaml  test_cli.py  test_common.py
